fix: reduce width of Image, add icon and gap for content in button

--- a/packages/web/src/components/ui/button/Button.module.scss
+++ b/packages/web/src/components/ui/button/Button.module.scss
@@ -18,6 +18,7 @@ $border-radius: 3px;
   justify-content: center;
   text-transform: uppercase;
   letter-spacing: 1px;
+  gap: 0.5rem;
 }
 
 // Variants
