--- a/packages/web/src/features/homepage/swiper/CarSwiper.module.scss
+++ b/packages/web/src/features/homepage/swiper/CarSwiper.module.scss
@@ -50,7 +50,7 @@
 }
 
 .slideImage {
-  max-width: 100%;
+  max-width: 70%;
   max-height: 100%;
   object-fit: contain;
   filter: drop-shadow(0px 20px 30px rgba(0, 0, 0, 0.15));
